--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,31 @@ Markdown==3.5.1
 pytz==2023.3.post1
 sqlparse==0.4.4
 tzdata==2023.4
+asgiref==3.7.2
+attrs==23.2.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+Django==5.0.1
+django-filter==23.5
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+drf-spectacular==0.27.0
+flake8==6.1.0
+idna==3.6
+inflection==0.5.1
+jsonschema==4.20.0
+jsonschema-specifications==2023.12.1
+Markdown==3.5.1
+mccabe==0.7.0
+pillow==10.2.0
+pycodestyle==2.11.1
+pyflakes==3.1.0
+PyJWT==2.8.0
+pytz==2023.3.post1
+PyYAML==6.0.1
+referencing==0.32.1
+rpds-py==0.16.2
+sqlparse==0.4.4
+tzdata==2023.4
+uritemplate==4.1.1
+urllib3==2.1.0
